refactored code with new package name

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.teammanagerapp"
+        applicationId "com.wb.teammanagerapp"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -107,6 +107,18 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+
+	signingConfigs {
+			release {
+			    if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+				storeFile file(MYAPP_RELEASE_STORE_FILE)
+				storePassword MYAPP_RELEASE_STORE_PASSWORD
+				keyAlias MYAPP_RELEASE_KEY_ALIAS
+				keyPassword MYAPP_RELEASE_KEY_PASSWORD
+			    }
+			}
+		    }
+
     splits {
         abi {
             reset()
@@ -117,6 +129,7 @@ android {
     }
     buildTypes {
         release {
+			signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
