--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,9 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=ksk.keystore
+MYAPP_RELEASE_KEY_ALIAS=ksk_alias
+MYAPP_RELEASE_STORE_PASSWORD=ksk@1234
+MYAPP_RELEASE_KEY_PASSWORD=ksk@1234
+
