--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "TeamManagerApp",
-  "displayName": "TeamManagerApp"
+  "name": "TeamManagerPro",
+  "displayName": "Team Manager Pro"
 }
