--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,7 +153,7 @@ dependencies {
     compile project(':react-native-splash-screen')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile "com.facebook.react:react-native:0.50"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
