--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-datepicker": "^1.6.0",
