--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-datepicker": "^1.6.0",
+    "react-native-exit-app": "^1.0.0",
     "react-native-splash-screen": "^3.0.6",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
